# deltachat-jsonrpc

./: .gitignore  Cargo.toml  LICENSE  README.MD  TODO.md
.github/workflows/: cmd_api.yml  rust.yml
dc_cmd_derive/: Cargo.toml
dc_cmd_derive/src/: lib.rs
src/: generate_typescript.rs  lib.rs  main.rs  webserver.rs
src/api/: events.rs  mod.rs  return_type.rs
src/api/types/: account.rs  chat.rs  chat_list.rs  contact.rs  message.rs  mod.rs  provider_info.rs  return_type.rs
typescript/: .gitignore  .prettierignore  example.ts  index.html  node-demo.js  package-lock.json  package.json  report_api_coverage.mjs  tsconfig.json
typescript/accounts/: accounts.toml
typescript/example/: .gitignore  browser-example.html
typescript/example/src/: script.js  util.js
typescript/src/: bindings.ts  client.ts  deltachat.ts  events.ts  json_rpc_error.ts  lib.ts
typescript/test/: basic.ts  online.ts  test_base.ts  tsconfig.json
