[package]
name = "dc_cmd_api"
version = "0.1.0"
authors = ["Delta Chat Developers (ML) <delta@codespeak.net>"]
edition = "2018"
default-run = "dc_cmd_api"

[[bin]]
name = "gen_ts"
path = "src/generate_typescript.rs" 

[dependencies]
anyhow = "1.0.41"
async-std = { version="1.9.0", features = ["attributes"]}
dc_cmd_derive = { path = "./dc_cmd_derive" }
deltachat = { git = "https://github.com/deltachat/deltachat-core-rust" }
jsonrpc-core = "17.1.0"
num-traits = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.2.0"

[workspace]
members = ["dc_cmd_derive"]


[profile.release]
lto = true
