[package]
name = "dc_cmd_api"
version = "0.1.0"
authors = ["Delta Chat Developers (ML) <delta@codespeak.net>"]
edition = "2018"
default-run = "webserver"

[[bin]]
name = "gen_ts"
path = "src/generate_typescript.rs" 
test = false

[[bin]]
name = "webserver"
path = "src/webserver.rs"
required-features = ["webserver"]

[dependencies]
anyhow = "1.0.41"
async-std = { version="1.9.0", features = ["attributes"]}
dc_cmd_derive = { path = "./dc_cmd_derive" }
deltachat = { git = "https://github.com/deltachat/deltachat-core-rust" }
jsonrpc-core = "17.1.0"
num-traits = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.2.0"
log = "0.4.14"
# optional, depended on features
async-channel = { version="1.6.1", optional=true}
env_logger = { version="0.8.4", optional=true}
futures = { version="0.3.15", optional=true}
tide = { version="0.16.0", optional=true}
tide-websockets = { version="0.4.0", optional=true}


[features]
webserver = ["async-channel", "env_logger", "futures", "tide", "tide-websockets" ]

[workspace]
members = ["dc_cmd_derive"]


[profile.release]
lto = true
