[package]
name = "dc_cmd_api"
version = "0.1.0"
authors = ["Delta Chat Developers (ML) <delta@codespeak.net>"]
edition = "2021"
default-run = "webserver"
license = "MPL-2.0"

[[bin]]
name = "webserver"
path = "src/webserver.rs"

[dependencies]
anyhow = "1.0.52"
async-std = { version = "1.10.0", features = ["attributes"] }
deltachat = { git = "https://github.com/deltachat/deltachat-core-rust", rev = "9b562eebcd65fea91b06737a96e0eec7a576e942" }
# deltachat = { git = "https://github.com/deltachat/deltachat-core-rust", tag = "1.70.0" }
num-traits = "0.2.14"
serde = { version = "1.0.133", features = ["derive"] }
tempfile = "3.3.0"
log = "0.4.14"
# optional, depended on features
async-channel = { version = "1.6.1", optional = true }
env_logger = { version = "0.9.0", optional = true }
futures = { version = "0.3.19", optional = true }
tide = { version = "0.16.0", optional = true }
tide-websockets = { version = "0.4.0", optional = true }
serde_json = "1.0.75"
yerpc = { path = "../yerpc/yerpc", features = ["anyhow"] }
yerpc-tide = { path = "../yerpc/yerpc-tide" }
typescript-type-def = { git = "https://github.com/Frando/rust-typescript-type-def.git", branch = "delta", features = ["json_value"] }


[features]
default = ["webserver"]
webserver = ["async-channel", "env_logger", "futures", "tide", "tide-websockets" ]

[profile.release]
lto = true
